fix issues on construct module highlited by SonarQube